// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`misc_functions.sql > line 20 1`] = `
[
  "SELECT num_nulls(NULL)",
  {
    "stmts": [
      {
        "stmt": {
          "SelectStmt": {
            "limitOption": "LIMIT_OPTION_DEFAULT",
            "op": "SETOP_NONE",
            "targetList": [
              {
                "ResTarget": {
                  "location": 7,
                  "val": {
                    "FuncCall": {
                      "args": [
                        {
                          "A_Const": {
                            "isnull": true,
                            "location": 17,
                          },
                        },
                      ],
                      "funcformat": "COERCE_EXPLICIT_CALL",
                      "funcname": [
                        {
                          "String": {
                            "sval": "num_nulls",
                          },
                        },
                      ],
                      "location": 7,
                    },
                  },
                },
              },
            ],
          },
        },
      },
    ],
    "version": 160001,
  },
]
`;

exports[`misc_functions.sql > line 30 1`] = `
[
  "SELECT num_nonnulls(VARIADIC NULL::text[])",
  {
    "stmts": [
      {
        "stmt": {
          "SelectStmt": {
            "limitOption": "LIMIT_OPTION_DEFAULT",
            "op": "SETOP_NONE",
            "targetList": [
              {
                "ResTarget": {
                  "location": 7,
                  "val": {
                    "FuncCall": {
                      "args": [
                        {
                          "TypeCast": {
                            "arg": {
                              "A_Const": {
                                "isnull": true,
                                "location": 29,
                              },
                            },
                            "location": 33,
                            "typeName": {
                              "arrayBounds": [
                                {
                                  "Integer": {},
                                },
                              ],
                              "location": 35,
                              "names": [
                                {
                                  "String": {
                                    "sval": "text",
                                  },
                                },
                              ],
                              "typemod": -1,
                            },
                          },
                        },
                      ],
                      "func_variadic": true,
                      "funcformat": "COERCE_EXPLICIT_CALL",
                      "funcname": [
                        {
                          "String": {
                            "sval": "num_nonnulls",
                          },
                        },
                      ],
                      "location": 7,
                    },
                  },
                },
              },
            ],
          },
        },
      },
    ],
    "version": 160001,
  },
]
`;

exports[`misc_functions.sql > line 36 1`] = `
[
  "SELECT num_nonnulls()",
  {
    "stmts": [
      {
        "stmt": {
          "SelectStmt": {
            "limitOption": "LIMIT_OPTION_DEFAULT",
            "op": "SETOP_NONE",
            "targetList": [
              {
                "ResTarget": {
                  "location": 7,
                  "val": {
                    "FuncCall": {
                      "funcformat": "COERCE_EXPLICIT_CALL",
                      "funcname": [
                        {
                          "String": {
                            "sval": "num_nonnulls",
                          },
                        },
                      ],
                      "location": 7,
                    },
                  },
                },
              },
            ],
          },
        },
      },
    ],
    "version": 160001,
  },
]
`;

exports[`misc_functions.sql > line 48 1`] = `
[
  "SELECT test_canonicalize_path('/')",
  {
    "stmts": [
      {
        "stmt": {
          "SelectStmt": {
            "limitOption": "LIMIT_OPTION_DEFAULT",
            "op": "SETOP_NONE",
            "targetList": [
              {
                "ResTarget": {
                  "location": 7,
                  "val": {
                    "FuncCall": {
                      "args": [
                        {
                          "A_Const": {
                            "location": 30,
                            "sval": {
                              "sval": "/",
                            },
                          },
                        },
                      ],
                      "funcformat": "COERCE_EXPLICIT_CALL",
                      "funcname": [
                        {
                          "String": {
                            "sval": "test_canonicalize_path",
                          },
                        },
                      ],
                      "location": 7,
                    },
                  },
                },
              },
            ],
          },
        },
      },
    ],
    "version": 160001,
  },
]
`;

exports[`misc_functions.sql > line 82 1`] = `
[
  "SELECT pg_log_backend_memory_contexts(pid) FROM pg_stat_activity
  WHERE backend_type = 'checkpointer'",
  {
    "stmts": [
      {
        "stmt": {
          "SelectStmt": {
            "fromClause": [
              {
                "RangeVar": {
                  "inh": true,
                  "location": 48,
                  "relname": "pg_stat_activity",
                  "relpersistence": "p",
                },
              },
            ],
            "limitOption": "LIMIT_OPTION_DEFAULT",
            "op": "SETOP_NONE",
            "targetList": [
              {
                "ResTarget": {
                  "location": 7,
                  "val": {
                    "FuncCall": {
                      "args": [
                        {
                          "ColumnRef": {
                            "fields": [
                              {
                                "String": {
                                  "sval": "pid",
                                },
                              },
                            ],
                            "location": 38,
                          },
                        },
                      ],
                      "funcformat": "COERCE_EXPLICIT_CALL",
                      "funcname": [
                        {
                          "String": {
                            "sval": "pg_log_backend_memory_contexts",
                          },
                        },
                      ],
                      "location": 7,
                    },
                  },
                },
              },
            ],
            "whereClause": {
              "A_Expr": {
                "kind": "AEXPR_OP",
                "lexpr": {
                  "ColumnRef": {
                    "fields": [
                      {
                        "String": {
                          "sval": "backend_type",
                        },
                      },
                    ],
                    "location": 73,
                  },
                },
                "location": 86,
                "name": [
                  {
                    "String": {
                      "sval": "=",
                    },
                  },
                ],
                "rexpr": {
                  "A_Const": {
                    "location": 88,
                    "sval": {
                      "sval": "checkpointer",
                    },
                  },
                },
              },
            },
          },
        },
      },
    ],
    "version": 160001,
  },
]
`;

exports[`misc_functions.sql > line 85 1`] = `
[
  "CREATE ROLE regress_log_memory",
  {
    "stmts": [
      {
        "stmt": {
          "CreateRoleStmt": {
            "role": "regress_log_memory",
            "stmt_type": "ROLESTMT_ROLE",
          },
        },
      },
    ],
    "version": 160001,
  },
]
`;

exports[`misc_functions.sql > line 87 1`] = `
[
  "SELECT has_function_privilege('regress_log_memory',
  'pg_log_backend_memory_contexts(integer)', 'EXECUTE')",
  {
    "stmts": [
      {
        "stmt": {
          "SelectStmt": {
            "limitOption": "LIMIT_OPTION_DEFAULT",
            "op": "SETOP_NONE",
            "targetList": [
              {
                "ResTarget": {
                  "location": 7,
                  "val": {
                    "FuncCall": {
                      "args": [
                        {
                          "A_Const": {
                            "location": 30,
                            "sval": {
                              "sval": "regress_log_memory",
                            },
                          },
                        },
                        {
                          "A_Const": {
                            "location": 54,
                            "sval": {
                              "sval": "pg_log_backend_memory_contexts(integer)",
                            },
                          },
                        },
                        {
                          "A_Const": {
                            "location": 97,
                            "sval": {
                              "sval": "EXECUTE",
                            },
                          },
                        },
                      ],
                      "funcformat": "COERCE_EXPLICIT_CALL",
                      "funcname": [
                        {
                          "String": {
                            "sval": "has_function_privilege",
                          },
                        },
                      ],
                      "location": 7,
                    },
                  },
                },
              },
            ],
          },
        },
      },
    ],
    "version": 160001,
  },
]
`;

exports[`misc_functions.sql > line 88 1`] = `
[
  " -- no

GRANT EXECUTE ON FUNCTION pg_log_backend_memory_contexts(integer)
  TO regress_log_memory",
  {
    "stmts": [
      {
        "stmt": {
          "GrantStmt": {
            "behavior": "DROP_RESTRICT",
            "grantees": [
              {
                "RoleSpec": {
                  "location": 79,
                  "rolename": "regress_log_memory",
                  "roletype": "ROLESPEC_CSTRING",
                },
              },
            ],
            "is_grant": true,
            "objects": [
              {
                "ObjectWithArgs": {
                  "objargs": [
                    {
                      "TypeName": {
                        "location": 65,
                        "names": [
                          {
                            "String": {
                              "sval": "pg_catalog",
                            },
                          },
                          {
                            "String": {
                              "sval": "int4",
                            },
                          },
                        ],
                        "typemod": -1,
                      },
                    },
                  ],
                  "objfuncargs": [
                    {
                      "FunctionParameter": {
                        "argType": {
                          "location": 65,
                          "names": [
                            {
                              "String": {
                                "sval": "pg_catalog",
                              },
                            },
                            {
                              "String": {
                                "sval": "int4",
                              },
                            },
                          ],
                          "typemod": -1,
                        },
                        "mode": "FUNC_PARAM_DEFAULT",
                      },
                    },
                  ],
                  "objname": [
                    {
                      "String": {
                        "sval": "pg_log_backend_memory_contexts",
                      },
                    },
                  ],
                },
              },
            ],
            "objtype": "OBJECT_FUNCTION",
            "privileges": [
              {
                "AccessPriv": {
                  "priv_name": "execute",
                },
              },
            ],
            "targtype": "ACL_TARGET_OBJECT",
          },
        },
      },
    ],
    "version": 160001,
  },
]
`;

exports[`misc_functions.sql > line 94 1`] = `
[
  " -- yes

SET ROLE regress_log_memory",
  {
    "stmts": [
      {
        "stmt": {
          "VariableSetStmt": {
            "args": [
              {
                "A_Const": {
                  "location": 18,
                  "sval": {
                    "sval": "regress_log_memory",
                  },
                },
              },
            ],
            "kind": "VAR_SET_VALUE",
            "name": "role",
          },
        },
      },
    ],
    "version": 160001,
  },
]
`;

exports[`misc_functions.sql > line 100 1`] = `
[
  "REVOKE EXECUTE ON FUNCTION pg_log_backend_memory_contexts(integer)
  FROM regress_log_memory",
  {
    "stmts": [
      {
        "stmt": {
          "GrantStmt": {
            "behavior": "DROP_RESTRICT",
            "grantees": [
              {
                "RoleSpec": {
                  "location": 74,
                  "rolename": "regress_log_memory",
                  "roletype": "ROLESPEC_CSTRING",
                },
              },
            ],
            "objects": [
              {
                "ObjectWithArgs": {
                  "objargs": [
                    {
                      "TypeName": {
                        "location": 58,
                        "names": [
                          {
                            "String": {
                              "sval": "pg_catalog",
                            },
                          },
                          {
                            "String": {
                              "sval": "int4",
                            },
                          },
                        ],
                        "typemod": -1,
                      },
                    },
                  ],
                  "objfuncargs": [
                    {
                      "FunctionParameter": {
                        "argType": {
                          "location": 58,
                          "names": [
                            {
                              "String": {
                                "sval": "pg_catalog",
                              },
                            },
                            {
                              "String": {
                                "sval": "int4",
                              },
                            },
                          ],
                          "typemod": -1,
                        },
                        "mode": "FUNC_PARAM_DEFAULT",
                      },
                    },
                  ],
                  "objname": [
                    {
                      "String": {
                        "sval": "pg_log_backend_memory_contexts",
                      },
                    },
                  ],
                },
              },
            ],
            "objtype": "OBJECT_FUNCTION",
            "privileges": [
              {
                "AccessPriv": {
                  "priv_name": "execute",
                },
              },
            ],
            "targtype": "ACL_TARGET_OBJECT",
          },
        },
      },
    ],
    "version": 160001,
  },
]
`;

exports[`misc_functions.sql > line 103 1`] = `
[
  "DROP ROLE regress_log_memory",
  {
    "stmts": [
      {
        "stmt": {
          "DropRoleStmt": {
            "roles": [
              {
                "RoleSpec": {
                  "location": 10,
                  "rolename": "regress_log_memory",
                  "roletype": "ROLESPEC_CSTRING",
                },
              },
            ],
          },
        },
      },
    ],
    "version": 160001,
  },
]
`;

exports[`misc_functions.sql > line 117 1`] = `
[
  "select count(*) > 0 as ok from (select pg_ls_waldir()) ss",
  {
    "stmts": [
      {
        "stmt": {
          "SelectStmt": {
            "fromClause": [
              {
                "RangeSubselect": {
                  "alias": {
                    "aliasname": "ss",
                  },
                  "subquery": {
                    "SelectStmt": {
                      "limitOption": "LIMIT_OPTION_DEFAULT",
                      "op": "SETOP_NONE",
                      "targetList": [
                        {
                          "ResTarget": {
                            "location": 39,
                            "val": {
                              "FuncCall": {
                                "funcformat": "COERCE_EXPLICIT_CALL",
                                "funcname": [
                                  {
                                    "String": {
                                      "sval": "pg_ls_waldir",
                                    },
                                  },
                                ],
                                "location": 39,
                              },
                            },
                          },
                        },
                      ],
                    },
                  },
                },
              },
            ],
            "limitOption": "LIMIT_OPTION_DEFAULT",
            "op": "SETOP_NONE",
            "targetList": [
              {
                "ResTarget": {
                  "location": 7,
                  "name": "ok",
                  "val": {
                    "A_Expr": {
                      "kind": "AEXPR_OP",
                      "lexpr": {
                        "FuncCall": {
                          "agg_star": true,
                          "funcformat": "COERCE_EXPLICIT_CALL",
                          "funcname": [
                            {
                              "String": {
                                "sval": "count",
                              },
                            },
                          ],
                          "location": 7,
                        },
                      },
                      "location": 16,
                      "name": [
                        {
                          "String": {
                            "sval": ">",
                          },
                        },
                      ],
                      "rexpr": {
                        "A_Const": {
                          "ival": {},
                          "location": 18,
                        },
                      },
                    },
                  },
                },
              },
            ],
          },
        },
      },
    ],
    "version": 160001,
  },
]
`;

exports[`misc_functions.sql > line 119 1`] = `
[
  "select * from pg_ls_waldir() limit 0",
  {
    "stmts": [
      {
        "stmt": {
          "SelectStmt": {
            "fromClause": [
              {
                "RangeFunction": {
                  "functions": [
                    {
                      "List": {
                        "items": [
                          {
                            "FuncCall": {
                              "funcformat": "COERCE_EXPLICIT_CALL",
                              "funcname": [
                                {
                                  "String": {
                                    "sval": "pg_ls_waldir",
                                  },
                                },
                              ],
                              "location": 14,
                            },
                          },
                          {},
                        ],
                      },
                    },
                  ],
                },
              },
            ],
            "limitCount": {
              "A_Const": {
                "ival": {},
                "location": 35,
              },
            },
            "limitOption": "LIMIT_OPTION_COUNT",
            "op": "SETOP_NONE",
            "targetList": [
              {
                "ResTarget": {
                  "location": 7,
                  "val": {
                    "ColumnRef": {
                      "fields": [
                        {
                          "A_Star": {},
                        },
                      ],
                      "location": 7,
                    },
                  },
                },
              },
            ],
          },
        },
      },
    ],
    "version": 160001,
  },
]
`;

exports[`misc_functions.sql > line 124 1`] = `
[
  "select count(*) >= 0 as ok from pg_ls_archive_statusdir()",
  {
    "stmts": [
      {
        "stmt": {
          "SelectStmt": {
            "fromClause": [
              {
                "RangeFunction": {
                  "functions": [
                    {
                      "List": {
                        "items": [
                          {
                            "FuncCall": {
                              "funcformat": "COERCE_EXPLICIT_CALL",
                              "funcname": [
                                {
                                  "String": {
                                    "sval": "pg_ls_archive_statusdir",
                                  },
                                },
                              ],
                              "location": 32,
                            },
                          },
                          {},
                        ],
                      },
                    },
                  ],
                },
              },
            ],
            "limitOption": "LIMIT_OPTION_DEFAULT",
            "op": "SETOP_NONE",
            "targetList": [
              {
                "ResTarget": {
                  "location": 7,
                  "name": "ok",
                  "val": {
                    "A_Expr": {
                      "kind": "AEXPR_OP",
                      "lexpr": {
                        "FuncCall": {
                          "agg_star": true,
                          "funcformat": "COERCE_EXPLICIT_CALL",
                          "funcname": [
                            {
                              "String": {
                                "sval": "count",
                              },
                            },
                          ],
                          "location": 7,
                        },
                      },
                      "location": 16,
                      "name": [
                        {
                          "String": {
                            "sval": ">=",
                          },
                        },
                      ],
                      "rexpr": {
                        "A_Const": {
                          "ival": {},
                          "location": 19,
                        },
                      },
                    },
                  },
                },
              },
            ],
          },
        },
      },
    ],
    "version": 160001,
  },
]
`;

exports[`misc_functions.sql > line 127 1`] = `
[
  "select length(pg_read_file('postmaster.pid')) > 20",
  {
    "stmts": [
      {
        "stmt": {
          "SelectStmt": {
            "limitOption": "LIMIT_OPTION_DEFAULT",
            "op": "SETOP_NONE",
            "targetList": [
              {
                "ResTarget": {
                  "location": 7,
                  "val": {
                    "A_Expr": {
                      "kind": "AEXPR_OP",
                      "lexpr": {
                        "FuncCall": {
                          "args": [
                            {
                              "FuncCall": {
                                "args": [
                                  {
                                    "A_Const": {
                                      "location": 27,
                                      "sval": {
                                        "sval": "postmaster.pid",
                                      },
                                    },
                                  },
                                ],
                                "funcformat": "COERCE_EXPLICIT_CALL",
                                "funcname": [
                                  {
                                    "String": {
                                      "sval": "pg_read_file",
                                    },
                                  },
                                ],
                                "location": 14,
                              },
                            },
                          ],
                          "funcformat": "COERCE_EXPLICIT_CALL",
                          "funcname": [
                            {
                              "String": {
                                "sval": "length",
                              },
                            },
                          ],
                          "location": 7,
                        },
                      },
                      "location": 46,
                      "name": [
                        {
                          "String": {
                            "sval": ">",
                          },
                        },
                      ],
                      "rexpr": {
                        "A_Const": {
                          "ival": {
                            "ival": 20,
                          },
                          "location": 48,
                        },
                      },
                    },
                  },
                },
              },
            ],
          },
        },
      },
    ],
    "version": 160001,
  },
]
`;

exports[`misc_functions.sql > line 130 1`] = `
[
  "select pg_read_file('does not exist')",
  {
    "stmts": [
      {
        "stmt": {
          "SelectStmt": {
            "limitOption": "LIMIT_OPTION_DEFAULT",
            "op": "SETOP_NONE",
            "targetList": [
              {
                "ResTarget": {
                  "location": 7,
                  "val": {
                    "FuncCall": {
                      "args": [
                        {
                          "A_Const": {
                            "location": 20,
                            "sval": {
                              "sval": "does not exist",
                            },
                          },
                        },
                      ],
                      "funcformat": "COERCE_EXPLICIT_CALL",
                      "funcname": [
                        {
                          "String": {
                            "sval": "pg_read_file",
                          },
                        },
                      ],
                      "location": 7,
                    },
                  },
                },
              },
            ],
          },
        },
      },
    ],
    "version": 160001,
  },
]
`;

exports[`misc_functions.sql > line 130 2`] = `
[
  " -- error
select pg_read_file('does not exist', true) IS NULL",
  {
    "stmts": [
      {
        "stmt": {
          "SelectStmt": {
            "limitOption": "LIMIT_OPTION_DEFAULT",
            "op": "SETOP_NONE",
            "targetList": [
              {
                "ResTarget": {
                  "location": 17,
                  "val": {
                    "NullTest": {
                      "arg": {
                        "FuncCall": {
                          "args": [
                            {
                              "A_Const": {
                                "location": 30,
                                "sval": {
                                  "sval": "does not exist",
                                },
                              },
                            },
                            {
                              "A_Const": {
                                "boolval": {
                                  "boolval": true,
                                },
                                "location": 48,
                              },
                            },
                          ],
                          "funcformat": "COERCE_EXPLICIT_CALL",
                          "funcname": [
                            {
                              "String": {
                                "sval": "pg_read_file",
                              },
                            },
                          ],
                          "location": 17,
                        },
                      },
                      "location": 54,
                      "nulltesttype": "IS_NULL",
                    },
                  },
                },
              },
            ],
          },
        },
      },
    ],
    "version": 160001,
  },
]
`;

exports[`misc_functions.sql > line 134 1`] = `
[
  " -- error

-- pg_read_binary_file()
select length(pg_read_binary_file('postmaster.pid')) > 20",
  {
    "stmts": [
      {
        "stmt": {
          "SelectStmt": {
            "limitOption": "LIMIT_OPTION_DEFAULT",
            "op": "SETOP_NONE",
            "targetList": [
              {
                "ResTarget": {
                  "location": 43,
                  "val": {
                    "A_Expr": {
                      "kind": "AEXPR_OP",
                      "lexpr": {
                        "FuncCall": {
                          "args": [
                            {
                              "FuncCall": {
                                "args": [
                                  {
                                    "A_Const": {
                                      "location": 70,
                                      "sval": {
                                        "sval": "postmaster.pid",
                                      },
                                    },
                                  },
                                ],
                                "funcformat": "COERCE_EXPLICIT_CALL",
                                "funcname": [
                                  {
                                    "String": {
                                      "sval": "pg_read_binary_file",
                                    },
                                  },
                                ],
                                "location": 50,
                              },
                            },
                          ],
                          "funcformat": "COERCE_EXPLICIT_CALL",
                          "funcname": [
                            {
                              "String": {
                                "sval": "length",
                              },
                            },
                          ],
                          "location": 43,
                        },
                      },
                      "location": 89,
                      "name": [
                        {
                          "String": {
                            "sval": ">",
                          },
                        },
                      ],
                      "rexpr": {
                        "A_Const": {
                          "ival": {
                            "ival": 20,
                          },
                          "location": 91,
                        },
                      },
                    },
                  },
                },
              },
            ],
          },
        },
      },
    ],
    "version": 160001,
  },
]
`;

exports[`misc_functions.sql > line 140 1`] = `
[
  "select pg_read_binary_file('does not exist')",
  {
    "stmts": [
      {
        "stmt": {
          "SelectStmt": {
            "limitOption": "LIMIT_OPTION_DEFAULT",
            "op": "SETOP_NONE",
            "targetList": [
              {
                "ResTarget": {
                  "location": 7,
                  "val": {
                    "FuncCall": {
                      "args": [
                        {
                          "A_Const": {
                            "location": 27,
                            "sval": {
                              "sval": "does not exist",
                            },
                          },
                        },
                      ],
                      "funcformat": "COERCE_EXPLICIT_CALL",
                      "funcname": [
                        {
                          "String": {
                            "sval": "pg_read_binary_file",
                          },
                        },
                      ],
                      "location": 7,
                    },
                  },
                },
              },
            ],
          },
        },
      },
    ],
    "version": 160001,
  },
]
`;

exports[`misc_functions.sql > line 140 2`] = `
[
  " -- error
select pg_read_binary_file('does not exist', true) IS NULL",
  {
    "stmts": [
      {
        "stmt": {
          "SelectStmt": {
            "limitOption": "LIMIT_OPTION_DEFAULT",
            "op": "SETOP_NONE",
            "targetList": [
              {
                "ResTarget": {
                  "location": 17,
                  "val": {
                    "NullTest": {
                      "arg": {
                        "FuncCall": {
                          "args": [
                            {
                              "A_Const": {
                                "location": 37,
                                "sval": {
                                  "sval": "does not exist",
                                },
                              },
                            },
                            {
                              "A_Const": {
                                "boolval": {
                                  "boolval": true,
                                },
                                "location": 55,
                              },
                            },
                          ],
                          "funcformat": "COERCE_EXPLICIT_CALL",
                          "funcname": [
                            {
                              "String": {
                                "sval": "pg_read_binary_file",
                              },
                            },
                          ],
                          "location": 17,
                        },
                      },
                      "location": 61,
                      "nulltesttype": "IS_NULL",
                    },
                  },
                },
              },
            ],
          },
        },
      },
    ],
    "version": 160001,
  },
]
`;

exports[`misc_functions.sql > line 144 1`] = `
[
  " -- error

-- pg_stat_file()
select size > 20, isdir from pg_stat_file('postmaster.pid')",
  {
    "stmts": [
      {
        "stmt": {
          "SelectStmt": {
            "fromClause": [
              {
                "RangeFunction": {
                  "functions": [
                    {
                      "List": {
                        "items": [
                          {
                            "FuncCall": {
                              "args": [
                                {
                                  "A_Const": {
                                    "location": 71,
                                    "sval": {
                                      "sval": "postmaster.pid",
                                    },
                                  },
                                },
                              ],
                              "funcformat": "COERCE_EXPLICIT_CALL",
                              "funcname": [
                                {
                                  "String": {
                                    "sval": "pg_stat_file",
                                  },
                                },
                              ],
                              "location": 58,
                            },
                          },
                          {},
                        ],
                      },
                    },
                  ],
                },
              },
            ],
            "limitOption": "LIMIT_OPTION_DEFAULT",
            "op": "SETOP_NONE",
            "targetList": [
              {
                "ResTarget": {
                  "location": 36,
                  "val": {
                    "A_Expr": {
                      "kind": "AEXPR_OP",
                      "lexpr": {
                        "ColumnRef": {
                          "fields": [
                            {
                              "String": {
                                "sval": "size",
                              },
                            },
                          ],
                          "location": 36,
                        },
                      },
                      "location": 41,
                      "name": [
                        {
                          "String": {
                            "sval": ">",
                          },
                        },
                      ],
                      "rexpr": {
                        "A_Const": {
                          "ival": {
                            "ival": 20,
                          },
                          "location": 43,
                        },
                      },
                    },
                  },
                },
              },
              {
                "ResTarget": {
                  "location": 47,
                  "val": {
                    "ColumnRef": {
                      "fields": [
                        {
                          "String": {
                            "sval": "isdir",
                          },
                        },
                      ],
                      "location": 47,
                    },
                  },
                },
              },
            ],
          },
        },
      },
    ],
    "version": 160001,
  },
]
`;

exports[`misc_functions.sql > line 150 1`] = `
[
  "select * from (select pg_ls_dir('.') a) a where a = 'base' limit 1",
  {
    "stmts": [
      {
        "stmt": {
          "SelectStmt": {
            "fromClause": [
              {
                "RangeSubselect": {
                  "alias": {
                    "aliasname": "a",
                  },
                  "subquery": {
                    "SelectStmt": {
                      "limitOption": "LIMIT_OPTION_DEFAULT",
                      "op": "SETOP_NONE",
                      "targetList": [
                        {
                          "ResTarget": {
                            "location": 22,
                            "name": "a",
                            "val": {
                              "FuncCall": {
                                "args": [
                                  {
                                    "A_Const": {
                                      "location": 32,
                                      "sval": {
                                        "sval": ".",
                                      },
                                    },
                                  },
                                ],
                                "funcformat": "COERCE_EXPLICIT_CALL",
                                "funcname": [
                                  {
                                    "String": {
                                      "sval": "pg_ls_dir",
                                    },
                                  },
                                ],
                                "location": 22,
                              },
                            },
                          },
                        },
                      ],
                    },
                  },
                },
              },
            ],
            "limitCount": {
              "A_Const": {
                "ival": {
                  "ival": 1,
                },
                "location": 65,
              },
            },
            "limitOption": "LIMIT_OPTION_COUNT",
            "op": "SETOP_NONE",
            "targetList": [
              {
                "ResTarget": {
                  "location": 7,
                  "val": {
                    "ColumnRef": {
                      "fields": [
                        {
                          "A_Star": {},
                        },
                      ],
                      "location": 7,
                    },
                  },
                },
              },
            ],
            "whereClause": {
              "A_Expr": {
                "kind": "AEXPR_OP",
                "lexpr": {
                  "ColumnRef": {
                    "fields": [
                      {
                        "String": {
                          "sval": "a",
                        },
                      },
                    ],
                    "location": 48,
                  },
                },
                "location": 50,
                "name": [
                  {
                    "String": {
                      "sval": "=",
                    },
                  },
                ],
                "rexpr": {
                  "A_Const": {
                    "location": 52,
                    "sval": {
                      "sval": "base",
                    },
                  },
                },
              },
            },
          },
        },
      },
    ],
    "version": 160001,
  },
]
`;

exports[`misc_functions.sql > line 152 1`] = `
[
  "select pg_ls_dir('does not exist', false, false)",
  {
    "stmts": [
      {
        "stmt": {
          "SelectStmt": {
            "limitOption": "LIMIT_OPTION_DEFAULT",
            "op": "SETOP_NONE",
            "targetList": [
              {
                "ResTarget": {
                  "location": 7,
                  "val": {
                    "FuncCall": {
                      "args": [
                        {
                          "A_Const": {
                            "location": 17,
                            "sval": {
                              "sval": "does not exist",
                            },
                          },
                        },
                        {
                          "A_Const": {
                            "boolval": {},
                            "location": 35,
                          },
                        },
                        {
                          "A_Const": {
                            "boolval": {},
                            "location": 42,
                          },
                        },
                      ],
                      "funcformat": "COERCE_EXPLICIT_CALL",
                      "funcname": [
                        {
                          "String": {
                            "sval": "pg_ls_dir",
                          },
                        },
                      ],
                      "location": 7,
                    },
                  },
                },
              },
            ],
          },
        },
      },
    ],
    "version": 160001,
  },
]
`;

exports[`misc_functions.sql > line 153 1`] = `
[
  " -- ok
-- Test include_dot_dirs (third argument)
select count(*) = 1 as dot_found
  from pg_ls_dir('.', false, true) as ls where ls = '.'",
  {
    "stmts": [
      {
        "stmt": {
          "SelectStmt": {
            "fromClause": [
              {
                "RangeFunction": {
                  "alias": {
                    "aliasname": "ls",
                  },
                  "functions": [
                    {
                      "List": {
                        "items": [
                          {
                            "FuncCall": {
                              "args": [
                                {
                                  "A_Const": {
                                    "location": 99,
                                    "sval": {
                                      "sval": ".",
                                    },
                                  },
                                },
                                {
                                  "A_Const": {
                                    "boolval": {},
                                    "location": 104,
                                  },
                                },
                                {
                                  "A_Const": {
                                    "boolval": {
                                      "boolval": true,
                                    },
                                    "location": 111,
                                  },
                                },
                              ],
                              "funcformat": "COERCE_EXPLICIT_CALL",
                              "funcname": [
                                {
                                  "String": {
                                    "sval": "pg_ls_dir",
                                  },
                                },
                              ],
                              "location": 89,
                            },
                          },
                          {},
                        ],
                      },
                    },
                  ],
                },
              },
            ],
            "limitOption": "LIMIT_OPTION_DEFAULT",
            "op": "SETOP_NONE",
            "targetList": [
              {
                "ResTarget": {
                  "location": 56,
                  "name": "dot_found",
                  "val": {
                    "A_Expr": {
                      "kind": "AEXPR_OP",
                      "lexpr": {
                        "FuncCall": {
                          "agg_star": true,
                          "funcformat": "COERCE_EXPLICIT_CALL",
                          "funcname": [
                            {
                              "String": {
                                "sval": "count",
                              },
                            },
                          ],
                          "location": 56,
                        },
                      },
                      "location": 65,
                      "name": [
                        {
                          "String": {
                            "sval": "=",
                          },
                        },
                      ],
                      "rexpr": {
                        "A_Const": {
                          "ival": {
                            "ival": 1,
                          },
                          "location": 67,
                        },
                      },
                    },
                  },
                },
              },
            ],
            "whereClause": {
              "A_Expr": {
                "kind": "AEXPR_OP",
                "lexpr": {
                  "ColumnRef": {
                    "fields": [
                      {
                        "String": {
                          "sval": "ls",
                        },
                      },
                    ],
                    "location": 129,
                  },
                },
                "location": 132,
                "name": [
                  {
                    "String": {
                      "sval": "=",
                    },
                  },
                ],
                "rexpr": {
                  "A_Const": {
                    "location": 134,
                    "sval": {
                      "sval": ".",
                    },
                  },
                },
              },
            },
          },
        },
      },
    ],
    "version": 160001,
  },
]
`;

exports[`misc_functions.sql > line 161 1`] = `
[
  "select * from (select (pg_timezone_names()).name) ptn where name='UTC' limit 1",
  {
    "stmts": [
      {
        "stmt": {
          "SelectStmt": {
            "fromClause": [
              {
                "RangeSubselect": {
                  "alias": {
                    "aliasname": "ptn",
                  },
                  "subquery": {
                    "SelectStmt": {
                      "limitOption": "LIMIT_OPTION_DEFAULT",
                      "op": "SETOP_NONE",
                      "targetList": [
                        {
                          "ResTarget": {
                            "location": 22,
                            "val": {
                              "A_Indirection": {
                                "arg": {
                                  "FuncCall": {
                                    "funcformat": "COERCE_EXPLICIT_CALL",
                                    "funcname": [
                                      {
                                        "String": {
                                          "sval": "pg_timezone_names",
                                        },
                                      },
                                    ],
                                    "location": 23,
                                  },
                                },
                                "indirection": [
                                  {
                                    "String": {
                                      "sval": "name",
                                    },
                                  },
                                ],
                              },
                            },
                          },
                        },
                      ],
                    },
                  },
                },
              },
            ],
            "limitCount": {
              "A_Const": {
                "ival": {
                  "ival": 1,
                },
                "location": 77,
              },
            },
            "limitOption": "LIMIT_OPTION_COUNT",
            "op": "SETOP_NONE",
            "targetList": [
              {
                "ResTarget": {
                  "location": 7,
                  "val": {
                    "ColumnRef": {
                      "fields": [
                        {
                          "A_Star": {},
                        },
                      ],
                      "location": 7,
                    },
                  },
                },
              },
            ],
            "whereClause": {
              "A_Expr": {
                "kind": "AEXPR_OP",
                "lexpr": {
                  "ColumnRef": {
                    "fields": [
                      {
                        "String": {
                          "sval": "name",
                        },
                      },
                    ],
                    "location": 60,
                  },
                },
                "location": 64,
                "name": [
                  {
                    "String": {
                      "sval": "=",
                    },
                  },
                ],
                "rexpr": {
                  "A_Const": {
                    "location": 65,
                    "sval": {
                      "sval": "UTC",
                    },
                  },
                },
              },
            },
          },
        },
      },
    ],
    "version": 160001,
  },
]
`;

exports[`misc_functions.sql > line 164 1`] = `
[
  "select count(*) > 0 from
  (select pg_tablespace_databases(oid) as pts from pg_tablespace
   where spcname = 'pg_default') pts
  join pg_database db on pts.pts = db.oid",
  {
    "stmts": [
      {
        "stmt": {
          "SelectStmt": {
            "fromClause": [
              {
                "JoinExpr": {
                  "jointype": "JOIN_INNER",
                  "larg": {
                    "RangeSubselect": {
                      "alias": {
                        "aliasname": "pts",
                      },
                      "subquery": {
                        "SelectStmt": {
                          "fromClause": [
                            {
                              "RangeVar": {
                                "inh": true,
                                "location": 76,
                                "relname": "pg_tablespace",
                                "relpersistence": "p",
                              },
                            },
                          ],
                          "limitOption": "LIMIT_OPTION_DEFAULT",
                          "op": "SETOP_NONE",
                          "targetList": [
                            {
                              "ResTarget": {
                                "location": 35,
                                "name": "pts",
                                "val": {
                                  "FuncCall": {
                                    "args": [
                                      {
                                        "ColumnRef": {
                                          "fields": [
                                            {
                                              "String": {
                                                "sval": "oid",
                                              },
                                            },
                                          ],
                                          "location": 59,
                                        },
                                      },
                                    ],
                                    "funcformat": "COERCE_EXPLICIT_CALL",
                                    "funcname": [
                                      {
                                        "String": {
                                          "sval": "pg_tablespace_databases",
                                        },
                                      },
                                    ],
                                    "location": 35,
                                  },
                                },
                              },
                            },
                          ],
                          "whereClause": {
                            "A_Expr": {
                              "kind": "AEXPR_OP",
                              "lexpr": {
                                "ColumnRef": {
                                  "fields": [
                                    {
                                      "String": {
                                        "sval": "spcname",
                                      },
                                    },
                                  ],
                                  "location": 99,
                                },
                              },
                              "location": 107,
                              "name": [
                                {
                                  "String": {
                                    "sval": "=",
                                  },
                                },
                              ],
                              "rexpr": {
                                "A_Const": {
                                  "location": 109,
                                  "sval": {
                                    "sval": "pg_default",
                                  },
                                },
                              },
                            },
                          },
                        },
                      },
                    },
                  },
                  "quals": {
                    "A_Expr": {
                      "kind": "AEXPR_OP",
                      "lexpr": {
                        "ColumnRef": {
                          "fields": [
                            {
                              "String": {
                                "sval": "pts",
                              },
                            },
                            {
                              "String": {
                                "sval": "pts",
                              },
                            },
                          ],
                          "location": 152,
                        },
                      },
                      "location": 160,
                      "name": [
                        {
                          "String": {
                            "sval": "=",
                          },
                        },
                      ],
                      "rexpr": {
                        "ColumnRef": {
                          "fields": [
                            {
                              "String": {
                                "sval": "db",
                              },
                            },
                            {
                              "String": {
                                "sval": "oid",
                              },
                            },
                          ],
                          "location": 162,
                        },
                      },
                    },
                  },
                  "rarg": {
                    "RangeVar": {
                      "alias": {
                        "aliasname": "db",
                      },
                      "inh": true,
                      "location": 134,
                      "relname": "pg_database",
                      "relpersistence": "p",
                    },
                  },
                },
              },
            ],
            "limitOption": "LIMIT_OPTION_DEFAULT",
            "op": "SETOP_NONE",
            "targetList": [
              {
                "ResTarget": {
                  "location": 7,
                  "val": {
                    "A_Expr": {
                      "kind": "AEXPR_OP",
                      "lexpr": {
                        "FuncCall": {
                          "agg_star": true,
                          "funcformat": "COERCE_EXPLICIT_CALL",
                          "funcname": [
                            {
                              "String": {
                                "sval": "count",
                              },
                            },
                          ],
                          "location": 7,
                        },
                      },
                      "location": 16,
                      "name": [
                        {
                          "String": {
                            "sval": ">",
                          },
                        },
                      ],
                      "rexpr": {
                        "A_Const": {
                          "ival": {},
                          "location": 18,
                        },
                      },
                    },
                  },
                },
              },
            ],
          },
        },
      },
    ],
    "version": 160001,
  },
]
`;

exports[`misc_functions.sql > line 172 1`] = `
[
  "CREATE ROLE regress_slot_dir_funcs",
  {
    "stmts": [
      {
        "stmt": {
          "CreateRoleStmt": {
            "role": "regress_slot_dir_funcs",
            "stmt_type": "ROLESTMT_ROLE",
          },
        },
      },
    ],
    "version": 160001,
  },
]
`;

exports[`misc_functions.sql > line 199 1`] = `
[
  "EXPLAIN (COSTS OFF)
SELECT * FROM tenk1 a JOIN tenk1 b ON a.unique1 = b.unique1
WHERE my_int_eq(a.unique2, 42)",
  {
    "stmts": [
      {
        "stmt": {
          "ExplainStmt": {
            "options": [
              {
                "DefElem": {
                  "arg": {
                    "String": {
                      "sval": "off",
                    },
                  },
                  "defaction": "DEFELEM_UNSPEC",
                  "defname": "costs",
                  "location": 9,
                },
              },
            ],
            "query": {
              "SelectStmt": {
                "fromClause": [
                  {
                    "JoinExpr": {
                      "jointype": "JOIN_INNER",
                      "larg": {
                        "RangeVar": {
                          "alias": {
                            "aliasname": "a",
                          },
                          "inh": true,
                          "location": 34,
                          "relname": "tenk1",
                          "relpersistence": "p",
                        },
                      },
                      "quals": {
                        "A_Expr": {
                          "kind": "AEXPR_OP",
                          "lexpr": {
                            "ColumnRef": {
                              "fields": [
                                {
                                  "String": {
                                    "sval": "a",
                                  },
                                },
                                {
                                  "String": {
                                    "sval": "unique1",
                                  },
                                },
                              ],
                              "location": 58,
                            },
                          },
                          "location": 68,
                          "name": [
                            {
                              "String": {
                                "sval": "=",
                              },
                            },
                          ],
                          "rexpr": {
                            "ColumnRef": {
                              "fields": [
                                {
                                  "String": {
                                    "sval": "b",
                                  },
                                },
                                {
                                  "String": {
                                    "sval": "unique1",
                                  },
                                },
                              ],
                              "location": 70,
                            },
                          },
                        },
                      },
                      "rarg": {
                        "RangeVar": {
                          "alias": {
                            "aliasname": "b",
                          },
                          "inh": true,
                          "location": 47,
                          "relname": "tenk1",
                          "relpersistence": "p",
                        },
                      },
                    },
                  },
                ],
                "limitOption": "LIMIT_OPTION_DEFAULT",
                "op": "SETOP_NONE",
                "targetList": [
                  {
                    "ResTarget": {
                      "location": 27,
                      "val": {
                        "ColumnRef": {
                          "fields": [
                            {
                              "A_Star": {},
                            },
                          ],
                          "location": 27,
                        },
                      },
                    },
                  },
                ],
                "whereClause": {
                  "FuncCall": {
                    "args": [
                      {
                        "ColumnRef": {
                          "fields": [
                            {
                              "String": {
                                "sval": "a",
                              },
                            },
                            {
                              "String": {
                                "sval": "unique2",
                              },
                            },
                          ],
                          "location": 96,
                        },
                      },
                      {
                        "A_Const": {
                          "ival": {
                            "ival": 42,
                          },
                          "location": 107,
                        },
                      },
                    ],
                    "funcformat": "COERCE_EXPLICIT_CALL",
                    "funcname": [
                      {
                        "String": {
                          "sval": "my_int_eq",
                        },
                      },
                    ],
                    "location": 86,
                  },
                },
              },
            },
          },
        },
      },
    ],
    "version": 160001,
  },
]
`;

exports[`misc_functions.sql > line 209 1`] = `
[
  "ALTER FUNCTION my_int_eq(int, int) SUPPORT test_support_func",
  {
    "stmts": [
      {
        "stmt": {
          "AlterFunctionStmt": {
            "actions": [
              {
                "DefElem": {
                  "arg": {
                    "List": {
                      "items": [
                        {
                          "String": {
                            "sval": "test_support_func",
                          },
                        },
                      ],
                    },
                  },
                  "defaction": "DEFELEM_UNSPEC",
                  "defname": "support",
                  "location": 35,
                },
              },
            ],
            "func": {
              "objargs": [
                {
                  "TypeName": {
                    "location": 25,
                    "names": [
                      {
                        "String": {
                          "sval": "pg_catalog",
                        },
                      },
                      {
                        "String": {
                          "sval": "int4",
                        },
                      },
                    ],
                    "typemod": -1,
                  },
                },
                {
                  "TypeName": {
                    "location": 30,
                    "names": [
                      {
                        "String": {
                          "sval": "pg_catalog",
                        },
                      },
                      {
                        "String": {
                          "sval": "int4",
                        },
                      },
                    ],
                    "typemod": -1,
                  },
                },
              ],
              "objfuncargs": [
                {
                  "FunctionParameter": {
                    "argType": {
                      "location": 25,
                      "names": [
                        {
                          "String": {
                            "sval": "pg_catalog",
                          },
                        },
                        {
                          "String": {
                            "sval": "int4",
                          },
                        },
                      ],
                      "typemod": -1,
                    },
                    "mode": "FUNC_PARAM_DEFAULT",
                  },
                },
                {
                  "FunctionParameter": {
                    "argType": {
                      "location": 30,
                      "names": [
                        {
                          "String": {
                            "sval": "pg_catalog",
                          },
                        },
                        {
                          "String": {
                            "sval": "int4",
                          },
                        },
                      ],
                      "typemod": -1,
                    },
                    "mode": "FUNC_PARAM_DEFAULT",
                  },
                },
              ],
              "objname": [
                {
                  "String": {
                    "sval": "my_int_eq",
                  },
                },
              ],
            },
            "objtype": "OBJECT_FUNCTION",
          },
        },
      },
    ],
    "version": 160001,
  },
]
`;

exports[`misc_functions.sql > line 216 1`] = `
[
  "CREATE FUNCTION my_gen_series(int, int) RETURNS SETOF integer
  LANGUAGE internal STRICT IMMUTABLE PARALLEL SAFE
  AS $$generate_series_int4$$
  SUPPORT test_support_func",
  {
    "stmts": [
      {
        "stmt": {
          "CreateFunctionStmt": {
            "funcname": [
              {
                "String": {
                  "sval": "my_gen_series",
                },
              },
            ],
            "options": [
              {
                "DefElem": {
                  "arg": {
                    "String": {
                      "sval": "internal",
                    },
                  },
                  "defaction": "DEFELEM_UNSPEC",
                  "defname": "language",
                  "location": 64,
                },
              },
              {
                "DefElem": {
                  "arg": {
                    "Boolean": {
                      "boolval": true,
                    },
                  },
                  "defaction": "DEFELEM_UNSPEC",
                  "defname": "strict",
                  "location": 82,
                },
              },
              {
                "DefElem": {
                  "arg": {
                    "String": {
                      "sval": "immutable",
                    },
                  },
                  "defaction": "DEFELEM_UNSPEC",
                  "defname": "volatility",
                  "location": 89,
                },
              },
              {
                "DefElem": {
                  "arg": {
                    "String": {
                      "sval": "safe",
                    },
                  },
                  "defaction": "DEFELEM_UNSPEC",
                  "defname": "parallel",
                  "location": 99,
                },
              },
              {
                "DefElem": {
                  "arg": {
                    "List": {
                      "items": [
                        {
                          "String": {
                            "sval": "generate_series_int4",
                          },
                        },
                      ],
                    },
                  },
                  "defaction": "DEFELEM_UNSPEC",
                  "defname": "as",
                  "location": 115,
                },
              },
              {
                "DefElem": {
                  "arg": {
                    "List": {
                      "items": [
                        {
                          "String": {
                            "sval": "test_support_func",
                          },
                        },
                      ],
                    },
                  },
                  "defaction": "DEFELEM_UNSPEC",
                  "defname": "support",
                  "location": 145,
                },
              },
            ],
            "parameters": [
              {
                "FunctionParameter": {
                  "argType": {
                    "location": 30,
                    "names": [
                      {
                        "String": {
                          "sval": "pg_catalog",
                        },
                      },
                      {
                        "String": {
                          "sval": "int4",
                        },
                      },
                    ],
                    "typemod": -1,
                  },
                  "mode": "FUNC_PARAM_DEFAULT",
                },
              },
              {
                "FunctionParameter": {
                  "argType": {
                    "location": 35,
                    "names": [
                      {
                        "String": {
                          "sval": "pg_catalog",
                        },
                      },
                      {
                        "String": {
                          "sval": "int4",
                        },
                      },
                    ],
                    "typemod": -1,
                  },
                  "mode": "FUNC_PARAM_DEFAULT",
                },
              },
            ],
            "returnType": {
              "location": 54,
              "names": [
                {
                  "String": {
                    "sval": "pg_catalog",
                  },
                },
                {
                  "String": {
                    "sval": "int4",
                  },
                },
              ],
              "setof": true,
              "typemod": -1,
            },
          },
        },
      },
    ],
    "version": 160001,
  },
]
`;

exports[`misc_functions.sql > line 221 1`] = `
[
  "EXPLAIN (COSTS OFF)
SELECT * FROM tenk1 a JOIN my_gen_series(1,1000) g ON a.unique1 = g",
  {
    "stmts": [
      {
        "stmt": {
          "ExplainStmt": {
            "options": [
              {
                "DefElem": {
                  "arg": {
                    "String": {
                      "sval": "off",
                    },
                  },
                  "defaction": "DEFELEM_UNSPEC",
                  "defname": "costs",
                  "location": 9,
                },
              },
            ],
            "query": {
              "SelectStmt": {
                "fromClause": [
                  {
                    "JoinExpr": {
                      "jointype": "JOIN_INNER",
                      "larg": {
                        "RangeVar": {
                          "alias": {
                            "aliasname": "a",
                          },
                          "inh": true,
                          "location": 34,
                          "relname": "tenk1",
                          "relpersistence": "p",
                        },
                      },
                      "quals": {
                        "A_Expr": {
                          "kind": "AEXPR_OP",
                          "lexpr": {
                            "ColumnRef": {
                              "fields": [
                                {
                                  "String": {
                                    "sval": "a",
                                  },
                                },
                                {
                                  "String": {
                                    "sval": "unique1",
                                  },
                                },
                              ],
                              "location": 74,
                            },
                          },
                          "location": 84,
                          "name": [
                            {
                              "String": {
                                "sval": "=",
                              },
                            },
                          ],
                          "rexpr": {
                            "ColumnRef": {
                              "fields": [
                                {
                                  "String": {
                                    "sval": "g",
                                  },
                                },
                              ],
                              "location": 86,
                            },
                          },
                        },
                      },
                      "rarg": {
                        "RangeFunction": {
                          "alias": {
                            "aliasname": "g",
                          },
                          "functions": [
                            {
                              "List": {
                                "items": [
                                  {
                                    "FuncCall": {
                                      "args": [
                                        {
                                          "A_Const": {
                                            "ival": {
                                              "ival": 1,
                                            },
                                            "location": 61,
                                          },
                                        },
                                        {
                                          "A_Const": {
                                            "ival": {
                                              "ival": 1000,
                                            },
                                            "location": 63,
                                          },
                                        },
                                      ],
                                      "funcformat": "COERCE_EXPLICIT_CALL",
                                      "funcname": [
                                        {
                                          "String": {
                                            "sval": "my_gen_series",
                                          },
                                        },
                                      ],
                                      "location": 47,
                                    },
                                  },
                                  {},
                                ],
                              },
                            },
                          ],
                        },
                      },
                    },
                  },
                ],
                "limitOption": "LIMIT_OPTION_DEFAULT",
                "op": "SETOP_NONE",
                "targetList": [
                  {
                    "ResTarget": {
                      "location": 27,
                      "val": {
                        "ColumnRef": {
                          "fields": [
                            {
                              "A_Star": {},
                            },
                          ],
                          "location": 27,
                        },
                      },
                    },
                  },
                ],
              },
            },
          },
        },
      },
    ],
    "version": 160001,
  },
]
`;

exports[`misc_functions.sql > line 228 1`] = `
[
  "SELECT count(*) > 0 AS ok FROM pg_control_checkpoint()",
  {
    "stmts": [
      {
        "stmt": {
          "SelectStmt": {
            "fromClause": [
              {
                "RangeFunction": {
                  "functions": [
                    {
                      "List": {
                        "items": [
                          {
                            "FuncCall": {
                              "funcformat": "COERCE_EXPLICIT_CALL",
                              "funcname": [
                                {
                                  "String": {
                                    "sval": "pg_control_checkpoint",
                                  },
                                },
                              ],
                              "location": 31,
                            },
                          },
                          {},
                        ],
                      },
                    },
                  ],
                },
              },
            ],
            "limitOption": "LIMIT_OPTION_DEFAULT",
            "op": "SETOP_NONE",
            "targetList": [
              {
                "ResTarget": {
                  "location": 7,
                  "name": "ok",
                  "val": {
                    "A_Expr": {
                      "kind": "AEXPR_OP",
                      "lexpr": {
                        "FuncCall": {
                          "agg_star": true,
                          "funcformat": "COERCE_EXPLICIT_CALL",
                          "funcname": [
                            {
                              "String": {
                                "sval": "count",
                              },
                            },
                          ],
                          "location": 7,
                        },
                      },
                      "location": 16,
                      "name": [
                        {
                          "String": {
                            "sval": ">",
                          },
                        },
                      ],
                      "rexpr": {
                        "A_Const": {
                          "ival": {},
                          "location": 18,
                        },
                      },
                    },
                  },
                },
              },
            ],
          },
        },
      },
    ],
    "version": 160001,
  },
]
`;

exports[`misc_functions.sql > line 234 1`] = `
[
  "SELECT * FROM pg_split_walfile_name(NULL)",
  {
    "stmts": [
      {
        "stmt": {
          "SelectStmt": {
            "fromClause": [
              {
                "RangeFunction": {
                  "functions": [
                    {
                      "List": {
                        "items": [
                          {
                            "FuncCall": {
                              "args": [
                                {
                                  "A_Const": {
                                    "isnull": true,
                                    "location": 36,
                                  },
                                },
                              ],
                              "funcformat": "COERCE_EXPLICIT_CALL",
                              "funcname": [
                                {
                                  "String": {
                                    "sval": "pg_split_walfile_name",
                                  },
                                },
                              ],
                              "location": 14,
                            },
                          },
                          {},
                        ],
                      },
                    },
                  ],
                },
              },
            ],
            "limitOption": "LIMIT_OPTION_DEFAULT",
            "op": "SETOP_NONE",
            "targetList": [
              {
                "ResTarget": {
                  "location": 7,
                  "val": {
                    "ColumnRef": {
                      "fields": [
                        {
                          "A_Star": {},
                        },
                      ],
                      "location": 7,
                    },
                  },
                },
              },
            ],
          },
        },
      },
    ],
    "version": 160001,
  },
]
`;
